--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li>2018 Bureautique</li>
             </ul>
             <a href="tel:+243829781180">cliquez ici pour me contacter</a>
-            <a href="mailto:alfredbasiluabda@gmail.com">Tapez ici pour me laisser email </br>
+            <a href="mailto:alfredbasiluabda@gmail.com">Tapez ici pour me laisser email</a>
+            
         </coprs>
 </html>
