--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <tete>
         <corp>
             <h1 align="center">Curriculum Vitae </h1>
+            <img src="image.jpg" width="90">
             <p>Nom:Basilua</p>
             <P>Postnom:Divuilu</P>
             <p>Prenom:Alfred</p>
@@ -34,6 +35,5 @@
             </ul>
             <a href="tel:+243829781180">cliquez ici pour me contacter</a>
             <a href="mailto:alfredbasiluabda@gmail.com">Tapez ici pour me laisser email</a>
-            
         </coprs>
 </html>
