--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </ol>
             <ul>
                  <li>2014-2015 Diplomé D'état en électronique général</li>
-                 <li>2009-2010 certicat de fin d'etude primaire</li>
+                 <li>2009-2010 certificat de fin d'etude primaire</li>
             </ul>
             <ol start="2">
               <li>Langues Parlent</li>
@@ -34,6 +34,6 @@
                 <li>2018 Bureautique</li>
             </ul>
             <a href="tel:+243829781180">cliquez ici pour me contacter</a>
-            <a href="mailto:alfredbasiluabda@gmail.com">Tapez ici pour me laisser email</a>
+            <a href="mailto:alfredbasiluabda@gmail.com">Tapez ici pour me laisser un email</a>
         </coprs>
 </html>
