--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+p<!DOCTYPE html>
 <html>
     <tete>
         <corp>
@@ -7,7 +7,7 @@
             <p>Nom:Basilua</p>
             <P>Postnom:Divuilu</P>
             <p>Prenom:Alfred</p>
-            <p>Date et lieu:08/12/1995 Matadi</p>
+            <p>Date et ligiteu:08/12/1995 Matadi</p>
             <p>Etat civil:célibataire</p>
             <p>Sexe:M</p>
 
