--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,24 @@
-!DOCTYPE <html>
-
+<!DOCTYPE <html>
     <html>
-        <h2>contacter</h2>
+        <tete>
+            <style>
+                @import url("style.css");
+            </style>
+            <coprs>
+
+                 <h2>Contatez-moi</h2>
+                 <p>Appel:</p>
+                 <ol>
+                    <li>+243829781180</li>
+                    <li>+243893004475</li>
+                 </ol>
+                 <p>Réseaux sociaux:</p>
+                 <ul>
+                    <li>Facebook:Alfred Basilua Divuilu</li>
+                    <li>Instagram:Alfred Basilua</li>
+                    <li>E-mail:Alfredbasiluabda@gmail.com</li>
+                 </ul>
+                 <a href="index.html">Retournez à la page d'accueil</a>
+
+        </body>
+            </html>
